# python-package-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: publish.yaml  tests.yaml
